--- a/ginas_curie.yaml
+++ b/ginas_curie.yaml
@@ -3,7 +3,7 @@
 'OIO'                       : 'http://www.geneontology.org/formats/oboInOwl#'
 'CHEBI'                     : 'http://purl.obolibrary.org/obo/chebi#'
 
-'names_name'	            : 'http://purl.obolibrary.org/obo/IAO_0000118'
+'names_name'	            : 'http://purl.obolibrary.org/obo/'
 
 # not sure we need to propagate the UUID at all any more. 
 # maybe to expose json?
@@ -11,7 +11,7 @@
 # 'uuid'                    :  https://tripod.nih.gov/ginas/app/api/v1/substances(<uuid>)
 
 #'approvalID'	            : 'https://tripod.nih.gov/ginas/app/substances?q=<approvalID>'
-'approvalID'	            : 'https://fdasis.nlm.nih.gov/srs/unii/'
+'UNII'	                    : 'https://fdasis.nlm.nih.gov/srs/unii/'
 
 # the leading underscore ???
 '_name'	                    : 'http://www.w3.org/2000/01/rdf-schema#label'
