--- a/ginas_curie.yaml
+++ b/ginas_curie.yaml
@@ -4,45 +4,23 @@
 'CHEBI'                     : 'http://purl.obolibrary.org/obo/chebi#'
 
 'names_name'	            : 'http://purl.obolibrary.org/obo/'
-
-# not sure we need to propagate the UUID at all any more. 
-# maybe to expose json?
-# 'uuid'	                : 'blob:https://tripod.nih.gov/<uuid>'
-# 'uuid'                    :  https://tripod.nih.gov/ginas/app/api/v1/substances(<uuid>)
-
-#'approvalID'	            : 'https://tripod.nih.gov/ginas/app/substances?q=<approvalID>'
 'UNII'	                    : 'https://fdasis.nlm.nih.gov/srs/unii/'
-
-# the leading underscore ???
-'_name'	                    : 'http://www.w3.org/2000/01/rdf-schema#label'
-'names_name'	            : 'http://purl.obolibrary.org/obo/IAO_0000118'     R
-'codes_codeSystem:code'	    : 'http://www.geneontology.org/formats/oboInOwl#hasDbXref'
-
-
+'rdfs'						: 'http://www.w3.org/2000/01/rdf-schema#'
 
 # The followling could all be expressed as base nodes to tripod ...
 # or given a curie name space
 
 'GINAS'                     : 'http://tripod.nih.gov/ginas/app/substance#
-'substanceClass'	        : 'http://tripod.nih.gov/ginas/app/substance#substanceClass'
-'references_citation'	    : 'http://tripod.nih.gov/ginas/app/substance#references_citation'
-'structure_smiles'	        : 'http://tripod.nih.gov/ginas/app/substance#structure_smiles'
-'structure_formula'	        : 'http://tripod.nih.gov/ginas/app/substance#structure_formula'
-'structure_opticalActivity'	: 'http://tripod.nih.gov/ginas/app/substance#structure_opticalActivity'
-'structure_atropoisomerism'	: 'http://tripod.nih.gov/ginas/app/substance#structure_atropoisomerism'
-'structure_stereoComments'	: 'http://tripod.nih.gov/ginas/app/substance#structure_stereoComments'
-'structure_stereoCenters'	: 'http://tripod.nih.gov/ginas/app/substance#structure_stereoCenters'
-'structure_definedStereo'	: 'http://tripod.nih.gov/ginas/app/substance#structure_definedStereo'
-'structure_ezCenters'	    : 'http://tripod.nih.gov/ginas/app/substance#structure_ezCenters'
-'structure_charge'	        : 'http://tripod.nih.gov/ginas/app/substance#structure_charge'
-'structure_mwt'	            : 'http://tripod.nih.gov/ginas/app/substance#structure_mwt'
+'GINASREF'                  : 'http://127.0.0.1/'
+'cite'                      : 'htto://127.0.0.1/' 
 
-#RELATIONSHIPS - 
-#we will just create one triple with the root substance as the subject 
-#for each object in the relationship stanza	
 
-':relationships_relatedSubstance': 'http://tripod.nih.gov/ginas/app/substance#'
-# "Property IRI variable based on value of the relationships_type attribute. 
-# IRI template = 
-# http://tripod.nih.gov/ginas/app/substance#[relationships_type], 
-# (e.g. 'http://tripod.nih.gov/ginas/app/substance#TARGET-INHIBITOR')"
+'MESH'						: 'http://purl.obolibrary.org/obo/MESH_'		
+'CAS'						: 'http://www.cas-no.org/'
+'MERCK_INDEX'				: 'https://www.rsc.org/Merck-Index/monograph/'		
+'ECHA'						: 'https://www.echa.europa.eu/web/guest/substance-information/-/substanceinfo/'
+'NCI_THESAURUS'				: 'https://ncit.nci.nih.gov/ncitbrowser/ConceptReport.jsp?dictionary=NCI_Thesaurus&code=' 	
+'RXCUI'						: 'http://purl.bioontology.org/ontology/RXNORM/'
+'WIKIPEDIA'					: 'https://en.wikipedia.org/wiki/'		
+'NCBITaxon'					: 'http://purl.obolibrary.org/obo/NCBITaxon_'		
+'INN'						: 'https://mednet-communities.net/inn/db/ViewINN.aspx?i='
